--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -170,10 +170,11 @@ jobs:
             echo "Asking Apple if it's Notarised"
             NOTARY_CHECK_OUTPUT=$(/usr/bin/xcrun altool --notarization-info "$NOTARY_TOKEN" --username $NOTARY_USERNAME --password $NOTARY_PASSWORD --output=json)
             NOTARY_CHECK_OUTPUT_STATUS=$(jq -n --argjson data "$NOTARY_CHECK_OUTPUT" '$data."notarization-info"."Status"')
-            [[ $NOTARY_CHECK_OUTPUT_STATUS == '"in progress"' ]] && echo "apple is still deciding" || echo "apple has made a decision" && break
+            [[ $NOTARY_CHECK_OUTPUT_STATUS == '"in progress"' ]] && echo "apple is still deciding" || break
             n=$((n+1))
             sleep 60
           done
+          echo "apple has made a decision"
           jq -n --argjson data "$NOTARY_CHECK_OUTPUT" '$data'
           [[ $NOTARY_CHECK_OUTPUT_STATUS == '"invalid"' ]] && echo "apple says it's invalid" && exit 1 || echo "apple says it's valid"
 
