--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -147,6 +147,8 @@ jobs:
           cp -r /Volumes/Fruit\ Economy/Fruit\ Economy.app .
           echo "=> Codesign App"
           /usr/bin/codesign --force --options runtime --timestamp --deep -s $MACOS_IDENTITY --entitlements build/entitlement.plist Fruit\ Economy.app -v
+          echo "=> Codesign App Native Libs"
+          /usr/bin/codesign --force --options runtime --timestamp -s $MACOS_IDENTITY --entitlements build/entitlement.plist Fruit\ Economy.app/Contents/runtime/Contents/MacOS/libjli.dylib -v
           echo "=> Make Directory For Data to Build into DMG"
           mkdir dmg_dir
           echo "=> Copy App into DMG Data Directory"
