Try signing the exec directly

--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -145,8 +145,8 @@ jobs:
           hdiutil attach Fruit_Economy-${{ env.RELEASE_VERSION }}.dmg
           echo "=> Copy App to Local Workspace"
           cp -r /Volumes/Fruit\ Economy/Fruit\ Economy.app .
-          echo "=> Codesign App"
-          /usr/bin/codesign --force --options runtime --timestamp --deep -s $MACOS_IDENTITY --entitlements build/entitlement.plist Fruit\ Economy.app -v
+          echo "=> Codesign App Executable"
+          /usr/bin/codesign --force --options runtime --timestamp -s $MACOS_IDENTITY --entitlements build/entitlement.plist Fruit\ Economy.app/Contents/MacOS/Fruit\ Economy -v
           echo "=> Codesign App Native Libs"
           /usr/bin/codesign --force --options runtime --timestamp -s $MACOS_IDENTITY --entitlements build/entitlement.plist Fruit\ Economy.app/Contents/runtime/Contents/MacOS/libjli.dylib -v
           echo "=> Make Directory For Data to Build into DMG"
