--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -172,7 +172,7 @@ jobs:
           done
           echo "=> Apple has made a decision"
           jq -n --argjson data "$NOTARY_CHECK_OUTPUT" '$data'
-          [[ $NOTARY_CHECK_OUTPUT_STATUS == '"invalid"' ]] && echo "=> Apple says it's invalid" || echo "=> Apple says it's valid"
+          [[ $NOTARY_CHECK_OUTPUT_STATUS == '"invalid"' ]] && echo "=> Apple says it's invalid" && exit 1 || echo "=> Apple says it's valid"
 
       - name: Setup upterm session
         uses: lhotari/action-upterm@v1
