--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -14,9 +14,9 @@ jobs:
     strategy:
       matrix:
         os: [
-            # ubuntu-latest,
+            ubuntu-latest,
             macos-latest,
-            # windows-latest
+            windows-latest
         ]
 
     runs-on: ${{ matrix.os }}
