--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -149,14 +149,10 @@ jobs:
           /usr/bin/codesign -vvv --force --options runtime --timestamp --deep -s $MACOS_IDENTITY --entitlements build/entitlement.plist Fruit\ Economy.app/Contents/runtime/Contents/MacOS/libjli.dylib -v
           echo "=> Codesign App"
           /usr/bin/codesign -vvv --force --options runtime --timestamp --deep -s $MACOS_IDENTITY --entitlements build/entitlement.plist Fruit\ Economy.app -v
-          echo "=> Copy App into DMG Data Directory"
-          cp -r Fruit\ Economy.app dmg_dir/Fruit\ Economy.app
-          echo "=> Create Writable DMG File"
-          hdiutil create /tmp/tmp.dmg -ov -volname "Fruit_Economy-${{ env.RELEASE_VERSION }}.dmg" -fs HFS+ -srcfolder "dmg_dir/"
-          echo "=> Move Old DMG Version"
-          mv Fruit_Economy-${{ env.RELEASE_VERSION }}.dmg Fruit_Economy-${{ env.RELEASE_VERSION }}.old.dmg
-          echo "=> Convert Writable DMG File to Readonly DMG File"
-          hdiutil convert /tmp/tmp.dmg -format UDZO -o Fruit_Economy-${{ env.RELEASE_VERSION }}.dmg
+          echo "=> Create DMG"
+          jpackage --verbose --name "Fruit Economy" --app-version ${{ steps.app_version.outputs.app_version_arg }} --type dmg --app-image Fruit\ Economy.app
+          echo "=> Rename DMG"
+          mv Fruit\ Economy-1.0.dmg Fruit_Economy-${{ env.RELEASE_VERSION }}.dmg
           echo "=> Sign the DMG"
           /usr/bin/codesign --force --timestamp -s $MACOS_IDENTITY --entitlements build/entitlement.plist Fruit_Economy-${{ env.RELEASE_VERSION }}.dmg
           echo "=> Send DMG to be Notarised"
