--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -226,7 +226,11 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/download-artifact@v2
+      - name: download artifacts from build
+        uses: dawidd6/action-download-artifact@v2
+        with:
+          workflow: build-deploy.yml
+          workflow_conclusion: success
 
       - name: Display structure of downloaded files
         run: ls -R
