--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -229,7 +229,7 @@ jobs:
       - name: download artifacts from build
         uses: dawidd6/action-download-artifact@v2
         with:
-          workflow: build-deploy.yml
+          workflow: build-release-artifacts.yml
           workflow_conclusion: success
 
       - name: Display structure of downloaded files
