--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -231,6 +231,7 @@ jobs:
         with:
           workflow: build-release-artifacts.yml
           workflow_conclusion: success
+          commit: ${{ github.sha }}
 
       - name: Display structure of downloaded files
         run: ls -R
