--- a/.github/workflows/build-release-artifacts.yml
+++ b/.github/workflows/build-release-artifacts.yml
@@ -231,7 +231,7 @@ jobs:
         with:
           workflow: build-release-artifacts.yml
           workflow_conclusion: success
-          commit: ${{ github.sha }}
+          run_id: ${{ github.run_id }}
 
       - name: Display structure of downloaded files
         run: ls -R
