--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ pom.xml.asc
 *.class
 /.lein-*
 /.nrepl-port
+/.prepl-port
 .hgignore
 .hg/
 
@@ -16,3 +17,9 @@ pom.xml.asc
 
 # .idea files
 .idea/
+
+# .cpcache files
+.cpcache/
+
+# .clj-kondo files
+.clj-kondo/
